Align footer text to center

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <a class="link" href="FrogCoin.html">FrogCoin</a>
     </div>    
     <img style="margin-left: 550px;" src="img/Mini-FrogCoin.png">
-    <footer> Site desenvolvido por <a href="Eu.html">Arthur</a></footer>
+    <footer style="text-align: center;"> Site desenvolvido por <a href="Eu.html">Arthur</a></footer>
     
 
 
